Fix unclickable ref sheet image on smaller screens

--- a/src/scss/modules/OcFormPage.module.scss
+++ b/src/scss/modules/OcFormPage.module.scss
@@ -99,6 +99,7 @@
       max-width: 50%;
       margin: 0 2rem 0.5rem 0;
       float: left;
+      z-index: 2;
     }
   }
 }
